[project]
name = "logpyt"
version = "1.0.0"
description = "Structured logging toolkit around Android logcat streams"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pydantic>=2.12.4"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.5",
    "ty>=0.0.12",
]
